# database-mcp

./: .env.example  .gitignore  Dockerfile  README.md  databases.yaml  docker-compose.yml  pyproject.toml
src/database_mcp/: config.py  guard.py  main.py  pool.py  router.py
src/database_mcp/tools/: query.py  schema.py
tests/: test_config.py  test_guard.py  test_router.py  test_tools_query.py  test_tools_schema.py
